--- a/points/points.html
+++ b/points/points.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>إدارة النقاط</title>
-    <link rel="stylesheet" href="main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Manage Points</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>إدارة النقاط</h1>
+  <h1>Points Management</h1>
 
-    <form id="add-point-form">
-        <input type="text" id="point-name" placeholder="اسم النقطة" required>
-        <input type="text" id="point-location" placeholder="الموقع">
-        <textarea id="point-description" placeholder="الوصف"></textarea>
-        <button type="submit">إضافة نقطة</button>
-    </form>
+  <form id="add-point-form">
+    <input type="text" id="point-name" placeholder="Point Name" required>
+    <input type="text" id="point-location" placeholder="Location">
+    <textarea id="point-description" placeholder="Description"></textarea>
+    <button type="submit">Add Point</button>
+  </form>
 
-    <ul id="points-list"></ul>
+  <ul id="points-list"></ul>
 
-    <script src="js/points.js"></script>
+  <script src="js/points.js"></script>
 </body>
 </html>
