--- a/visit/visits.html
+++ b/visit/visits.html
@@ -1,44 +1,63 @@
 <!DOCTYPE html>
 <html lang="he">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ניהול ביקורים</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>תצוגת הביקורים</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        <h1>תצוגת הביקורים</h1>
+        
+        <!-- טבלה להצגת ביקורים -->
+        <table>
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>שם שומר</th>
+                    <th>נקודת ביקור</th>
+                    <th>הערות</th>
+                    <th>זמן הביקור</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- כאן נוסיף שורות באופן דינמי -->
+            </tbody>
+        </table>
+        
+        <!-- טופס להוספת ביקור חדש -->
+        <div class="form-section">
+            <h2>הוסף ביקור חדש</h2>
+            <form id="addVisitForm">
+                <input type="number" id="comment" placeholder="ID">
+                <input type="text" id="guardName" placeholder="שם שומר" required>
+                <input type="text" id="comment" placeholder="הערה">
+                <button type="submit">הוסף ביקור</button>
+            </form>
+        </div>
 
-  <h1>ניהול ביקורים</h1>
+        <!-- טופס למחיקת ביקור לפי ID -->
+        <div class="form-section">
+            <h2>מחק ביקור לפי ID</h2>
+            <form id="deleteVisitForm">
+                <input type="number" id="visitIdToDelete" placeholder="ID">
+                <button type="submit">מחק ביקור</button>
+            </form>
+        </div>
 
-  <form id="add-visit-form">
-    <label for="guard-name">שם השומר:</label>
-    <input type="text" id="guard-name" placeholder="שם השומר" required>
+        <!-- טופס לעדכון ביקור -->
+        <div class="form-section">
+            <h2>עדכן ביקור</h2>
+            <form id="updateVisitForm">
+                <input type="number" id="visitIdToUpdate" placeholder="ID">
+                <input type="text" id="newGuardName" placeholder="שם שומר">
+                <input type="text" id="newComment" placeholder="הערה">
+                <button type="submit">עדכן ביקור</button>
+            </form>
+        </div>
+    </div>
 
-    <label for="point-select">נקודת ביקור:</label>
-    <select id="point-select" required>
-      <option value="" disabled selected>בחר נקודה</option>
-    </select>
-
-    <label for="comments">הערות (לא חובה):</label>
-    <textarea id="comments" placeholder="הערות (לא חובה)"></textarea>
-
-    <button type="submit">הוסף ביקור</button>
-  </form>
-
-  <h2>רשימת ביקורים</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>שם השומר</th>
-        <th>נקודת ביקור</th>
-        <th>הערות</th>
-        <th>תאריך ושעה</th>
-        <th>פעולות</th>
-      </tr>
-    </thead>
-    <tbody id="visits-list"></tbody>
-  </table>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
